# non_profit

./: pyproject.toml
non_profit/: hooks.py
non_profit/fixtures/: custom_field.json  property_setter.json
non_profit/non_profit/custom/: donor.json
